bug fix: add z-index tp span element on history page to make link work. also change title in html heads

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -391,6 +391,12 @@ iframe {
     padding: 1% 5%;
 }
 
+/* Necessary to make the link clickable, otherwise the div.card pseudo elements can cover it */
+.info span {
+    position: relative;
+    z-index: 10;
+}
+
 .info a {
     color: black;
     cursor: pointer;
